tests/parser-test-files/parse-lisp.txt
================================================================================
Malformed lisp expression
================================================================================

(package test-package)

(define f (lisp))

--------------------------------------------------------------------------------

error: Malformed lisp expression
  --> test:3:16
   |
 3 |  (define f (lisp))
   |                 ^ expected expression type

================================================================================
Malformed lisp expression
================================================================================

(package test-package)

(define f (lisp (T -> T)))

--------------------------------------------------------------------------------

error: Malformed lisp expression
  --> test:3:25
   |
 3 |  (define f (lisp (T -> T)))
   |                          ^ expected binding list

================================================================================
Malformed lisp expression
================================================================================

(package test-package)

(define f (lisp (T -> T) (x y)))

--------------------------------------------------------------------------------

error: Malformed lisp expression
  --> test:3:10
   |
 3 |  (define f (lisp (T -> T) (x y)))
   |            ^^^^^^^^^^^^^^^^^^^^^ expected body
